<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">NectarGroceries</string>
    <string name="loading">Loading…</string>
    <string name="there_s_nothing_here">There\'s nothing here.</string>

    <!--    splash screen -->
    <string name="nectar">nectar</string>
    <string name="online_groceries">online groceries</string>
    <string name="green_color_create">&lt;font color=\"#53B175\"&gt;%s&lt;/font&gt;</string>

    <!--    welcome screen  -->
    <string name="welcome_start">Welcome to \n our store</string>
    <string name="welcome_sub_desc">Ger your groceries in as fast as one hour</string>
    <string name="get_started">Get Started</string>

    <!--    login screen-->
    <string name="login">Login</string>
    <string name="enter_email_and_password">Enter your email and password</string>
    <string name="enter_email">Enter your email id here</string>
    <string name="enter_password">Enter your password here</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_in">Login In</string>
    <string name="do_not_create_account">Don\'t have and account?</string>
    <string name="Signup">Signup</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="enter_your_credentials">Enter your credentials to continue</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter your Username here</string>
    <string name="please_enter_username">Please Enter yor Username</string>
    <string name="please_enter_email">Please Enter yor email</string>
    <string name="email_is_invalid">Email is invalid</string>
    <string name="please_enter_password">Please Enter yor password</string>
    <string name="confirm_password_is_not_match">Confirm password is not match</string>
    <string name="password_length_invalid">Password length is inValid</string>
    <string name="please_enter_confirm_password">Please Enter yor confirm password</string>
    <string name="term_of_service">Term of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="term_condition">By continuing you agree to our %s and %s</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="next">Next</string>

    <!--    payment info screen -->
    <string name="payment_info_title">Payment Details</string>
    <string name="payment_info_desc">The card details and you are good to…</string>
    <string name="name_of_card">Name on the card:</string>
    <string name="enter_card_name">Enter your card name here</string>
    <string name="please_enter_card_name">Please enter your card name</string>
    <string name="please_enter_card_number">Please enter your card number</string>
    <string name="please_enter_card_expiry_date">Please enter your card expiry date</string>
    <string name="expiry_date_format_invalid">Expiry date format invalid</string>
    <string name="security_code_invalid">Security code invalid</string>
    <string name="please_enter_card_security_code">Please enter your card security code</string>
    <string name="enter_card_number">Enter your card number here</string>
    <string name="enter_card_number_format">0000 0000 0000 0000</string>
    <string name="enter_card_security_code">000</string>
    <string name="expiry_date_format">00/00</string>
    <string name="card_number">Card number:</string>
    <string name="expiry_date">Expiry date:</string>
    <string name="security_code">Security code:</string>

    <!--    main screen -->
    <string name="shop">Shop</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>
    <string name="basket">My Basket</string>
    <string name="yourProfile">Your Profile</string>

    <!--    shop screen-->
    <string name="exclusive_offer">Exclusive offer</string>
    <string name="best_selling">BestSelling</string>

    <!--    cart screen-->
    <string name="total_price">Total Price:£%s</string>
    <string name="total_order">Total Order:%s</string>
    <string name="product_add_in_basket">Product Add in Basket</string>
    <string name="product_add_failed_in_basket">Product Adding failed in Basket</string>
    <string name="please_add_order_in_basket">Please add order in basket</string>

    <!--    account screen-->
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="please_first_login_account">Please first login account</string>

    <!--    edit profile screen-->
    <string name="personal_details">Personal Details</string>
    <string name="update_profile_string">Update Profile</string>
    <string name="update_profile_message">Update Profile data has been successfully</string>
    <string name="please_update_profile_message">Please Change profile data filed</string>

    <!--    product details screen-->
    <string name="add_in_basket">Add In Basket</string>
    <string name="product_details">Details</string>
    <string name="product_sub_details">Details</string>
    <string name="product_benefits">Benefits</string>
    <string name="product_sub_benefits">Benefits</string>
    <string name="product_Review">Review</string>

    <!--    bottom order confirm dialog string -->
    <string name="order_accept_message">Your Order has been accepted</string>
    <string name="order_accept_sub_message">Your items has been placed and is on it’s way to being processed</string>
    <string name="done">Done</string>
    <string name="sendEmail">Submit</string>

    <!--    bottom address info dialog string -->
    <string name="add_address">Add Address</string>
    <string name="address_info">Address Information</string>
    <string name="add_address_info">Add Address Information</string>
    <string name="apartment_no">Apartment / House No.</string>
    <string name="apartment_name">Apartment Name / Street Details</string>
    <string name="landmark">Landmark(optional)</string>
    <string name="area_name">Area Name</string>
    <string name="City">City</string>
    <string name="State">State</string>
    <string name="address_info_null_message">Please file address information</string>
    <string name="address_information_added_successfully">Address information added successfully</string>

    <!--    item_product-->
    <string name="product_title">Apple</string>
    <string name="product_sub_desc">1Kg,price</string>
    <string name="product_quantity">4,Pcs</string>
    <string name="product_weight">1Kg</string>
    <string name="product_price">$4.96</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="set_price">£%s</string>

</resources>