<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.activity.LoginActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/ic_top_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/ic_bottom_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivCarrot"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_red_carrot"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llLoginTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_75sdp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivCarrot">

            <com.kotlin.program.nectargroceries.view.BoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="@dimen/_19ssp" />

            <com.kotlin.program.nectargroceries.view.SimpleTextview
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:includeFontPadding="false"
                android:text="@string/enter_email_and_password"
                android:textColor="@color/sub_desc_text_color"
                android:textSize="@dimen/_11ssp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llLoginTitle">

            <com.kotlin.program.nectargroceries.view.BoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/email"
                android:textColor="@color/sub_desc_text_color"
                android:textSize="@dimen/_14ssp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/pangram_regular"
                android:hint="@string/enter_email"
                android:includeFontPadding="false"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llEmail">

            <com.kotlin.program.nectargroceries.view.BoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/password"
                android:textColor="@color/sub_desc_text_color"
                android:textSize="@dimen/_14ssp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pangram_regular"
                    android:hint="@string/enter_password"
                    android:includeFontPadding="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11ssp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivVisibility"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="-30dp"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_round_visibility_off"
                    android:tint="@color/sub_desc_text_color" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.kotlin.program.nectargroceries.view.BoldTextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:alpha="0.6"
            android:includeFontPadding="false"
            android:text="@string/forgot_password"
            android:textColor="@color/sub_desc_text_color"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="@+id/llPassword"
            app:layout_constraintTop_toBottomOf="@+id/llPassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_28sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/start_btn_bg"
            android:fontFamily="@font/pangram_bold"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:padding="@dimen/_6sdp"
            android:text="@string/login_in"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textDirection="ltr"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword"
            tools:ignore="UnusedAttribute" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin">

            <com.kotlin.program.nectargroceries.view.SimpleTextview
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/do_not_create_account"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />

            <com.kotlin.program.nectargroceries.view.BoldTextView
                android:id="@+id/tvSingUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3sdp"
                android:includeFontPadding="false"
                android:text="@string/Signup"
                android:textColor="@color/themeColor"
                android:textSize="@dimen/_14ssp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>